resources/testcases_static_checks/tests/negative/isDrpc/criticalInstanceRequiredForUnblockableCheck.rls
A(!Z), R(?X, !Z) :- A(?X) .
R(?Z, ?Z) :- R(?X, ?Y), R(?Y, ?Z) .
